--- a/MyProject2.html
+++ b/MyProject2.html
@@ -3,23 +3,70 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
    <link rel="stylesheet" href="./MyProject2.css">
     <title>Document</title>
 </head>
 <body>  
-<img src="./pexels-photo-5807019.jpeg" alt="">
-<img src="./pexels-photo-3590401.jpeg" alt="">
-<img src="./pexels-photo-1279330.jpeg" alt="">
-<img src="./pexels-photo-4730662.jpeg" alt="">
-
-<img src="./pexels-photo-5419336.jpeg" alt="">
-<img src="./pexels-photo-6541815.jpeg" alt="">
-<img src="./pexels-photo-1527603.jpeg" alt="">
-<img src="./pexels-photo-2773940.jpeg" alt="">
-
 <button> <a href="./MyProject.html">العوده الى الرئيسيه</a></button>
+ 
+ <div id="div1">
+
+<button id="del" onclick="del()"> حذف المنتج</button>
+<button id="adding" onclick="add()">أضف منتج جديد </button>
+<input type="text" id="descreption" placeholder="وصف المنتج " >
+<input type="text" id="imgLink" placeholder=" اضف رابط صورة المنتج">
+ </div>
+
+<div id="mnuResturant">
+
 </div>
+<script src="./MyProject.js"> </script>
 </body>
 </html>
+
+
+
+
+<!--     
+<img src="./pexels-photo-5807019.jpeg" alt="">
+<p>باستا باللحم مع الصوص الخاص  </p>
+<button onclick="add()" id="add">أضف الى السله  </button>
+</div>
+
+<img src="./pexels-photo-3590401.jpeg" alt="">
+<p> باستا مع صوص البيستو و المكسرات </p>
+<button onclick="add()" id="add">أضف الى السله</button>
+</div>
+
+<img src="./pexels-photo-1279330.jpeg" alt="">
+<p>نودلز بالخضار  </p>
+<button onclick="add()" id="add">أضف الى السله</button>
+</div> --> 
+
+<!-- <img src="./pexels-photo-4730662.jpeg" alt="">
+<p>فوتوشيني بالخضار وصوص البيستو  </p> -->
+<!-- <button onclick="add()" id="add">أضف الى السله</button> -->
+
+
+<!-- <img src="./pexels-photo-5419336.jpeg" alt="">
+<p>باستا بالصوص الاحمر وجبنة البرميزان  </p> -->
+<!-- <button onclick="add()" id="add">أضف الى السله</button> -->
+
+
+<!-- <img src="./pexels-photo-6541815.jpeg" alt="">
+<p> باستا مع البقوليات و الجبن </p> -->
+<!-- <button onclick="add()" id="add">أضف الى السله</button> -->
+
+<!-- 
+<img src="./pexels-photo-1527603.jpeg" alt="">
+<p>باستا بالسجق و الصوص الاحمر  </p> -->
+<!-- <button onclick="add()" id="add">أضف الى السله</button> -->
+
+
+<!-- <img src="./pexels-photo-2773940.jpeg" alt="">
+<p>ترفل باستا   </p> -->
+
+<!-- <button id="Btn2" onclick="showhandler()">عرض</button> -->
