--- a/MyProject.html
+++ b/MyProject.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./MyProject.css">
-   
+  
     <title>Document</title>
 </head>
 <body>
@@ -16,15 +16,44 @@
             <li> <ion-icon name="call-outline"> تواصل معنا </ion-icon></li>
             <li> فروعنا </li>
             <li> <button> تسجيل الدخول </button></li>
+           
+            
         </ul>
     </nav>
-
    
-     <!-- <img src="./pexels-photo-1150447.jpeg" alt="">
-   -->
 
 
+  <div class="mySlides fade">
+    <div class="numbertext"></div>
+    <img src="./pexels-photo-1150447.jpeg" >
+   
+  </div>
 
-    <script src="./MyProject.js"></script>
+  <div class="mySlides fade">
+    <div class="numbertext"></div>
+    <img src="./pexels-photo-6287574.jpeg" >
+  
+  </div>
+
+  <div class="mySlides fade">
+    <div class="numbertext"></div>
+    <img src="./pexels-photo-4748543.jpeg" >
+  
+  </div>
+
+
+  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div>
+<br>
+
+<div>
+  <span class="dot" onclick="currentSlide(1)"></span>
+  <span class="dot" onclick="currentSlide(2)"></span>
+  <span class="dot" onclick="currentSlide(3)"></span>
+</div>
+
+
+    <script src="./project1.js"></script>
 </body>
 </html>
