--- a/MyProject.html
+++ b/MyProject.html
@@ -13,9 +13,9 @@
     <nav>
         <ul>
             <li> <a href="./MyProject2.html">قائمتنا </a>  </li>
-            <li> <ion-icon name="call-outline"> تواصل معنا </ion-icon></li>
+            <li> تواصل معنا   </li>
             <li> فروعنا </li>
-            <li> <button> تسجيل الدخول </button></li>
+            <!-- <li> <button> تسجيل الدخول </button></li> -->
            
             
         </ul>
