--- a/MyProject2.html
+++ b/MyProject2.html
@@ -23,6 +23,7 @@
 <div id="mnuResturant">
 
 </div>
+<a href="./MyProject2.html">أعلى الصفحه </a>
 <script src="./MyProject.js"> </script>
 </body>
 </html>
